# gee-helper.ts

./: .gee-helper.json  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: CI.yml
Project_Forecast/: Dataset.md  Forcing_Forecast.js  Forcing_Forecast.py  Forcing_HuNan.py  Forcing_HuNan_Year.py  Forcing_Hubei.py  Forcing_Hubei_PMLV2.py  Forcing_Week.py  Forcing_Year.py  Forecast_Hubei.py  check_bbox.R  check_bbox.jl  check_file.jl  check_forecast.jl  dataset.ts  ee_export.py  ee_export_weeks.py  grid.py  test.py  xee_down_EAR5L.py  xee_down_PRCP_GPM.py  xee_down_PRCP_GSMap.py  xee_down_forcing.py
ee-export/: README.md  ee_export.py  ee_export_weeks.py  grid.py
ee_export/: Forecast.py  README.md  __init__.py  dataset.py  ee_export.py  ee_export_weeks.py  grid.py  ultilize.py
ee_export/tests/: test_grid.py
examples/: README.md  RunALL.sh  build-frame.js  export.js  hello.js  modis-ndvi.js  require-pkg.js  require-smap.js  smap-mean.js  with-require.js
examples/lib/: region.js
examples/previous/: README.md  et0-code-editor-style.js  et0-pm-monthly.js  fao56.d.ts  fao56.js  fao56.md  modis-lst-monthly.js  run.sh  test01.js
src/: auth.d.ts  auth.js  cli.ts  ee.d.ts  ee.js  export-batches.ts  export-tasks.ts  frame-collection.ts  index.ts  local-host.ts  types.d.ts  types.ts
src/cli/: args.ts  export.ts  index.ts  local.ts  pkg.ts  run.ts
src/export/: batches.ts  bounds.ts  tasks.ts  (+1 more)
test/: auth-load.test.ts  config.test.ts  export-buckets.test.ts  gee-require.test.ts  local-host.test.ts  pkg-add.test.ts
(+4 files in other folders)
