[project]
name = "gee-helper"
version = "0.1.0"
description = "Run GEE in Local"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.7.1",
    "netcdf4>=1.7.4",
    "pandas>=3.0.3",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "xarray>=2026.7.0",
    "xee>=0.1.2",
]

[tool.setuptools.packages.find]
include = ["ee_export*"]
